--- a/ac-on-door-open-tts-announcer.yaml
+++ b/ac-on-door-open-tts-announcer.yaml
@@ -14,7 +14,7 @@ blueprint:
       description: The ecobee thermostat entity
       selector:
         entity:
-          device_class: climate
+          domain: climate
     speaker_target:
       name: Speaker
       description: Entity to announce event on (choose an Entity, not a Device!)
