enable_day no s

--- a/door-open-tts-announcer-v3.yaml
+++ b/door-open-tts-announcer-v3.yaml
@@ -25,7 +25,7 @@ blueprint:
       default: 60
       selector:
         duration:
-          enable_days: false
+          enable_day: false
     cooldown:
       name: Announcement repetition frequency
       description: Time between repeated announcements
