--- a/door-open-tts-announcer-v3.yaml
+++ b/door-open-tts-announcer-v3.yaml
@@ -22,7 +22,10 @@ blueprint:
     initial_delay:
       name: Initial delay
       description: Time before first announcement
-      default: 00:00:60
+      default:
+        hours: 0
+        minutes: 0
+        seconds: 60
       selector:
         duration:
           enable_day: false
