--- a/door-open-tts-announcer-v2.yaml
+++ b/door-open-tts-announcer-v2.yaml
@@ -1,5 +1,5 @@
 blueprint:
-  name: Door open TTS announcer with initial delay v2
+  name: Door open TTS announcer with initial delay
   domain: automation
   input:
     door_entity:
@@ -19,20 +19,24 @@ blueprint:
     announcement_message:
       name: Announcement message
       description: What to say when door is left open
+      default: The door has been left open
     initial_delay:
       name: Initial delay
-      description: Time before first announcement (in addition to repetition time)
-      default: 10
+      description: Time before first announcement
       selector:
         duration:
-          enable_days: false
+          enable_day: false
+      default:
+        hours: 0
+        minutes: 0
+        seconds: 60
     cooldown:
       name: Announcement repetition frequency
-      description: Time between repeated announcements (and after initial delay)
-      default: 10
+      description: Time between repeated announcements
+      default: 30
       selector:
         number:
-          min: 0
+          min: 15
           max: 600
           unit_of_measurement: seconds
 
@@ -49,7 +53,6 @@ action:
   - alias: Repeat the sequence UNTIL the door is closed
     repeat:
       sequence:
-        - delay: !input cooldown 
         - condition: state
           entity_id: !input door_entity
           state: 'on'
@@ -57,6 +60,7 @@ action:
           target: !input speaker_target
           data:
             message: !input announcement_message
+        - delay: !input cooldown 
       until:
         - condition: state
           entity_id: !input door_entity
