--- a/door-open-tts-announcer.yaml
+++ b/door-open-tts-announcer.yaml
@@ -19,22 +19,24 @@ blueprint:
     announcement_message:
       name: Announcement message
       description: What to say when door is left open
+      default: The door has been left open
     initial_delay:
       name: Initial delay
-      description: Time before first announcement (in addition to repetition time)
-      default: 10
+      description: Time before first announcement
       selector:
-        number:
-          min: 0
-          max: 600
-          unit_of_measurement: seconds
+        duration:
+          enable_day: false
+      default:
+        hours: 0
+        minutes: 0
+        seconds: 60
     cooldown:
       name: Announcement repetition frequency
       description: Time between repeated announcements
-      default: 10
+      default: 30
       selector:
         number:
-          min: 0
+          min: 15
           max: 600
           unit_of_measurement: seconds
 
@@ -45,13 +47,12 @@ trigger:
   entity_id: !input door_entity
   from: "off"
   to: "on"
+  for: !input initial_delay 
 
 action:
-  - delay: !input initial_delay 
   - alias: Repeat the sequence UNTIL the door is closed
     repeat:
       sequence:
-        - delay: !input cooldown 
         - condition: state
           entity_id: !input door_entity
           state: 'on'
@@ -59,6 +60,7 @@ action:
           target: !input speaker_target
           data:
             message: !input announcement_message
+        - delay: !input cooldown 
       until:
         - condition: state
           entity_id: !input door_entity
