--- a/ac-on-door-open-tts-announcer.yaml
+++ b/ac-on-door-open-tts-announcer.yaml
@@ -68,10 +68,17 @@ action:
         - condition: state
           entity_id: !input door_entity
           state: 'on'
-        - service: tts.google_translate_say
-          target: !input speaker_target
+        - service: tts.speak
+          target:
+            entity_id: tts.google_en_com
           data:
+            cache: true
+            media_player_entity_id: !input speaker_target
             message: !input announcement_message
+        #- service: tts.google_translate_say
+        #  target: !input speaker_target
+        #  data:
+        #    message: !input announcement_message
         - delay: !input cooldown 
       until:
         - condition: state
